--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -177,8 +177,8 @@ input[type="checkbox"] {
   display: inherit;
   letter-spacing: 1px;
   margin-top: 30px;
-  background-color: #eee;
-  padding: 7px 0px;
+  background-color: #f5f5f5;
+  padding: 7px 17px;
   text-indent: 1em;
   opacity: 0.7;
 }
@@ -186,7 +186,7 @@ input[type="checkbox"] {
   position: relative;
   display: inline-block;
   margin-top: 3px;
-  margin-left: 2px;
+  margin-left: 17px;
 }
 .ampliado ul {
   list-style-type: none;
@@ -217,6 +217,59 @@ input[type="checkbox"] {
   margin: auto;
   height: 90px;
 }
+.ampliado .botones_ampliado {
+	position: relative;
+	top: -30px;
+	width: 100%;
+	height: 30px;
+}
+.ampliado .botones_ampliado .enviar_ampliado {
+  background: #f5f5f5;
+  border-bottom: 1px solid #7CE1FF;
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 0.9rem;
+  padding: 0.6rem 1em;
+  color: #1e88e5;
+  top: 10px;
+  margin: 0 0.25rem;
+  text-align: center;
+	
+}
+.ampliado .botones_ampliado .localizacion_ampliado {
+  background: #f5f5f5;
+  border-bottom: 1px solid #7CE1FF;
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 1.1rem;
+  padding: 0.6rem 1em;
+  color: #1e88e5;
+  float: right;
+  top: 10px;
+  margin: 0 0.25rem;
+  text-align: center;
+	
+}
+.ampliado .botones_ampliado .foto_ampliado {
+  background: #f5f5f5;
+  border-bottom: 1px solid #7CE1FF;
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 1.1rem;
+  padding: 0.6rem 1em;
+  float: right;
+  color: #1e88e5;
+  top: 10px;
+  margin: 0 0.25rem;
+  text-align: center;
+
+}
+.ampliado .botones_ampliado .enviar_ampliado .fa-paper-plane {	
+	margin-right: 6px;
+}
 .ampliado .text_area ul {
   position: relative;
   top: -30px;
@@ -232,13 +285,15 @@ input[type="checkbox"] {
 }
 .ampliado textarea {
   overflow:hidden;
+  background: #fff;
   padding:10px;
   width:320px;
   font-size:14px;
   margin:50px auto;
   display:block;
   border-radius: 5px;
-  border: 3px solid #556677;
+  color: grey;
+  border: 1px solid #7CE1FF;
   resize: none;
 }
 input[type="checkbox"]{display:block;}
@@ -309,14 +364,14 @@ span[class*="entypo-thumbs-up"] {
   position: relative;
 }
 
-span[class*="plus"] {background:#97E2FF;}
+span[class*="plus"] {background:#e1f5fe;}
 span[class*="plus"]:hover {
   background:rgba(48,164,209,0.3);}
 
-span[class*="forward"] {background:#2D75D0;}
+span[class*="forward"] {background:#b3e5fc;}
 span[class*="forward"]:hover {
   background:rgba(46,120,209,0.3);}
-span[class*="thumbs-up"] {background:#30A4D1;}
+span[class*="thumbs-up"] {background:#81d4fa;}
 span[class*="thumbs-up"]:hover {
   background:rgba(48,164,209,0.3);}
 
