--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -161,7 +161,7 @@ top.window.outerWidth = screen.availWidth;
   	</li>
   	<li class="fa fa-comment fa-lg"></li>
       <div class="notificationss">
-        <li class="fa fa-bell fa-lg"><em>2</em></li>
+        <li class="fa fa-bell fa-lg"><em onclick="contador()">{{n_likes}}</em></li>
         <div id="notificationn">
           <ul class="not">
         <li>
