--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -1,151 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
 
 body {
-    width: 90%;
+    width: 100%;
     height: auto;
     padding: 0;
  }
-.wrapper {
-	position: relative;
-	width: 85%;
-	margin: auto;
-	left: 20%;
-	height: 80%;
-	display: block;
-	background-color: #fff;
-}
-.message {
-	top: 15px;
-	position: relative;
-	width: 350px;
-	height: 300px;
-  	margin: auto;
-	background-color: #fafafa;
-	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-	overflow: inherit;
-}
-.asunto {
-	height: 50%;
-	width: 100%;
-	margin-top: 30px;
-	position: relative;
-	margin: auto;
-	text-align: center;
-}
-.message_subject {
-		color: rgb(173,173,173);
-		font-weight: 300;
-		font-size: 21px;
-		text-decoration: none;
-}
-.time {
-	position: absolute;
-	width: 100%;
-	height: auto;
-	text-align: center;
-	top: 130px;
-}
-.ct {
-		position: relative;
-	margin: auto;
-	display: inline-block;
-  bottom: 32px
-}
-.ct a {
-	text-decoration: none;
-	margin-right: 50px;
-	margin-left: -10px;
-	margin-top: 25px;
-	transition: all .3s linear;
-	-webkit-transition: all .3s linear;
-	-moz-transition: all .3s linear;
-  	padding: 10px 10px;
-  	border-radius: 100%;
-  	cursor: pointer;
-  	color: rgba(44,44,44,0.777);
-  	border: 1px solid transparent;
-  	text-decoration: none;
-}
-}
-.ct li {
-	display: inline-block;
-	text-align: center;
-	list-style-type: none;
-}
-.date_time {
-	color: rgb(57,57,57);
-	font-style: normal;
-	font-size: 13px;
-	margin-top: 30px;
-}
-.bt {
-	position: relative;
-	width: 350px;
-	height: 300px;
-	top: 15px;
-	margin-top: 30px;
- 	margin-right: 30px;
- 	margin-bottom: 20px;
- 	display: inline-block;
-	background-color: #fafafa;
-	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-	overflow: inherit;
-	font-family: 'Open Sans', sans-serif;
-}
-.bt img {
-	position: absolute;
-	margin: auto;
-	width: 80px;
-	height: 80px;
-	border-radius: 100%;
-	top: -40px;
-	left: 135px;
-	border: 1px solid #ccc;
-}
 
-.name a {
-	text-align: center;
-	font-family: 'Open Sans', sans-serif;
-	position: relative;
-	display: block;
-	font-weight: 600;
-	top: 50px;
-	text-decoration: none;
-	font-style: bold;
-	color: #7a7a7a;
-}
-.wrapper li {
-  list-style-type: none;
-  margin-left: 10px;
-  margin-top: 20px;
-  display: inline-block;
-}
 
-.name {
-	position: relative;
-	display: block;
-	border-bottom: 2px solid #ccc;
-	height: 30%;
-	text-align: center;
-	width: 350px;
-	background-color: rgb(230,230,230);
-}
-.bt .resumen {
-	color: #404040;
-	font-weight: 600;
-	position: relative;
-	margin: auto;
-	text-align: center;
-	max-width: 100%;
-	top: 20px;
-}
-.bt .resumen p{
-	height: auto;
-	width: 100%;
-	margin-top: 30px;
-	font-weight: 100;
-	position: absolute;
-}
 /* nav */
 .box-tool {
   width: 99.3%;
@@ -199,108 +60,47 @@ body {
   width: 120px;
   height: 120px;
 }
-
-/* Mensajes privados - "titulo" */
-.titulo_m i {
-	margin-right: 10px;	
-}
-.titulo_m {
-  margin-left:  25px;
-  padding:  10px 10px;
-  background-color:  rgba(44,44,44,0.477);
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
-  font-size: 30px;
-  color: #F5F5F5;
-  width: 100%;
-}
-.fa-send {
-	background-color: #fff;
-	width: 50px;
-	height: 50px;
-	border-radius: 100%;
-	position: absolute;
-	float: right;
-	right: 130px;
-	top: 55px;
-	z-index: 9999;
-	border: 2px solid rgb(204,237,220);
-	color: rgb(147,217,181);
-	outline: none;
-	cursor: pointer;
-	-webkit-transition: all .3s linear;
-	-moz-transition: all .3s linear;
-	transtion: all .3s linear;
-}
-button:hover {
-	background-color: rgb(204,237,220);
-	border: 2px solid rgb(204,237,220);
-	color: #fff;
-}
-/* Menu con opciones */ 
-aside {
-  position:  absolute;
-  margin-left: 20px;
-  top: 130px;
-  background-color: #FAFAFA;
-  height: 420px;
-  width: 280px;
-  border-radius:  7px;
-  -webkit-box-shadow: 2px 2px 7px 0px #efefef;
--moz-box-shadow:    2px 2px 7px 0px #efefef;
-box-shadow:         2px 2px 7px 0px #efefef;
-}
-aside nav {
-  list-style-type:  none;
-  height: 100%;
-  font-weight: 100;
-  font-family: 'Open Sans', sans-serif;
-
-}
-aside nav li {
-  color:  #000;
-  margin-top:  20px;
-  padding:  10px 10px;
-  border-bottom:  2px solid #fff;
-  background-color:  #fafafa;
-  border-left: 5px solid rgba(44,44,44,0.854);
-  border-radius:  3px;
-  transition:  all .2s ease-in;
-  cursor:  pointer;
-}
-aside nav li:hover {
-  color:  #00CED1;
-  background-color:  rgba(44,44,44,0.854);
-  border-left: 5px solid rgba(44,44,44,0.854);
-}
-aside nav li i {
+.vertical-nav {
   float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  font-style: normal;
-  transition:  all .3s ease-in;
+  width: 35vh;
+  z-index: 9999;
+  margin-top: 30px;
 }
-aside nav li:hover > i {
-  margin-left: 40px;
+#new_message {
+  padding: 20px 20px;
+    height: 60px;
+} 
+
+.vertical-nav-2 {
+  float: right;
+  width: 35vh;
+  margin-top: 30px;
+}
+.image-user {
+
+    width: 80px;
+    height: 80px;
+  border-radius: 100%;
+}
+#contenedor_messages {
+  margin-top: 80px;
+  margin-left: 300px;
+  margin-right: 150px;
 }
 
-input[target="search"] {
-    border-radius: 20px;
-    background: url('http://png-4.findicons.com/files/icons/1389/g5_system/32/toolbar_find.png') 9px 9px no-repeat, linear-gradient(to bottom, #f7f7f8 0%,#ffffff 100%);
-    background-size: 19px;
-    border: none;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset, 0 -1px 0 rgba(0,0,0,0.05) inset;
-    transition: all 0.2s linear;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 13px;
-    color: #222222;
-    position: relative;
-    height: 36px;
-    width: 250px;
-    padding-left: 30px;
+@media screen and (max-width: 800px) { 
 
-}
-/* NOTIFICACIONES */
+  #contenedor_messages {
+  margin-left: 160px;
+    }
+ }
+
+@media screen and (min-width: 800px) and (max-width: 1000px) { 
+
+    #contenedor_messages {
+  margin-left: 160px;
+    }
+ }
 
 .no_messages {
 	color: rgb(185,230,207);
@@ -321,16 +121,6 @@ input[target="search"] {
 
 
 /* compose.html */
-
-.contenedor {
-	width: 750px;
-	height: 500px;
-	background-color: rgba(230,230,230,0.5);
-	position: relative;
-	font-family: 'Open Sans', sans-serif;
-	left: 30%;
-	display: block
-}
 
 label[for="id_recipient"] {
 	padding: 7px 12px;
@@ -443,30 +233,7 @@ input:focus {
   background-position: center;
   color: transparent;
 }
-
-
-/* view.html */
-h4 {
-    text-indent: inherit;
-    display: block;
-    position: absolute;
-    width: auto;
-    top: 120px;
-    left: 45%;
-    margin: auto;
-    z-index: 999;
-    border-bottom: 2px solid rgba(44,44,40,0.777);
-    color: rgba(44,44,44,0.877);
-    -webkit-transition: all .3s linear;
-    -moz-transition: all .3s linear;
-    transition: all .3s linear;
-     font-family: "Open Sans", sans-serif;
-    cursor: pointer;
-}
-.mensajes {
-	width: auto;
-	position: absolute;
-	height: auto;
-	left: 40%;
-	top: 25%;
+.time {
+  font-size: 0.9em;
+  font-style: normal;
 }
