--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -48,7 +48,7 @@
     <nav>
       <li class="perfil" onclick="javascript:window.location.href='/config/profile'"><i class="fontawesome-user"></i>Perfil</li>
       <li class="Contraseña" onclick="javascript:window.location.href='/accounts/password/change/'"><i class="fontawesome-lock"></i>Contraseña</li>
-      <li class="Seguridad"><i class="fa fa-eye fa"></i>Seguridad y privacidad</li>
+      <li onclick="javascript:window.location.href='/config/privacity'" class="Seguridad"><i class="fa fa-eye fa"></i>Seguridad y privacidad</li>
       <li class="Movil"><i class="fontawesome-envelope-alt"></i>Movil y correo</li>
       <li class="widgets"><i class="fontawesome-list-ul"></i>Widgets</li>
       <li class="Diseño"><i class="fontawesome-dashboard"></i>Diseño</li>
