--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -20,7 +20,9 @@ html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
-
+.activex {
+  color: red;
+}
 .container {
   *zoom: 1;
   max-width: 980px;
