--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -39,7 +39,15 @@
   </div>
 
 {% if resultSearch|length = 0 %}
-	<div id="search-noelements">Sin resultados</div>
+
+<div class="row">
+<div class="col s4 offset-s4">
+	   <div id="search-noelements" class="grey lighten-5 card-panel">
+       <h5 class="blue-text text-darken-2 center-align">Sin resultados</h5>
+    </div>
+  </div>
+</div>
+
 {% endif %}
 <ul>
 <div class="container">
