--- a/skyfolk/templates/django_messages/compose.html
+++ b/skyfolk/templates/django_messages/compose.html
@@ -1,14 +1,14 @@
-{% extends "django_messages/base.html" %} 
-{% load i18n %} 
-{% block content %} 
-<h1>{% trans "Compose Message"%}</h1>
-<div class="contenedor">
-<form action="" method="post">
-{% csrf_token %} 
-<table>
-{{ form.as_table }}
-</table>
-<input type="submit" value="{% trans "Send" %} &raquo;"/>
-</form>
-</div>
+{% extends "django_messages/base.html" %}
+{% load i18n %}
+{% block content %}
+    <h3 class="compose_message">{% trans "Compose Message"%}</h3>
+        <div class="container">
+            <form action="" method="post">
+                {% csrf_token %}
+            <table class="z-depth-1 compose_table">
+                {{ form.as_table }}
+            </table>
+            <input type="submit" value="{% trans "Send" %} &raquo;"/>
+            </form>
+        </div>
 {% endblock %}
