--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -84,6 +84,7 @@ body {
 }
 #contenedor_messages {
   margin-top: 80px;
+  max-width: 1100px;
   margin-left: 300px;
   margin-right: 150px;
 }
@@ -101,7 +102,12 @@ body {
   margin-left: 160px;
     }
  }
+@media screen and (min-width: 1000px) {
 
+  #contenedor_messages {
+    margin-left: 410px;
+  }
+}
 .no_messages {
 	color: rgb(185,230,207);
 	position: relative;
@@ -130,60 +136,61 @@ body {
 }
 .compose_table {
     width: 400px;
-    height: auto;
     position: relative;
+    height: auto;
     margin: auto;
 
 }
 label[for="id_recipient"] {
-
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 100;
+    font-size: 15px;
+    position: relative;
 }
 
 label[for="id_subject"] {
-
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  font-weight: 100;
+  position: relative;
 }
-
+label[for="id_body"] {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  font-weight: 100;
+  position: relative;
+}
 #id_recipient {
   display: inline-block;
-  width: 515px;
-  padding: 10px 0 7px 15px;
+  width: 90%;
+  min-width: 515px;
   font-family: "Open Sans", sans;
   font-weight: 400;
-  color: #377D6A;
-  background-color: #fff;
-  border: 0;
-  border-radius: 3px;
-  outline: 0;
-  text-indent: 10px; // Arbitrary.
+  color: #e0e0e0;
+  text-indent: 10px;
   transition: all .3s ease-in-out;
-  margin-top: 5%;
-  margin-left: 60px;
+  margin-top: 1%;
+  margin-left: 10px;
 }
 #id_subject {
   display: inline-block;
-  width: 515px;
-  padding: 10px 0 7px 15px;
+  width: 90%;
+  min-width: 515px;
   font-family: "Open Sans", sans;
   font-weight: 400;
-  color: #377D6A;
-  background-color: #fff;
-  border: 0;
-  border-radius: 3px;
-  outline: 0;
-  text-indent: 10px; // Arbitrary.
+  color: #e0e0e0;
+  text-indent: 10px;
   transition: all .3s ease-in-out;
   margin-top: 1%;
-  margin-left: 60px;
+  margin-left: 10px;
 }
 
-input:focus {
-  background-color: #fff;
-  transition: all .3s ease-in-out;
-}
 #id_body {
-
   margin-top: 20px;
-  width: 600px;
+  margin-bottom: 50px;
+  width: 90%;
+  min-width: 515px;
+  padding: 20px;
   font-family: "Open Sans", sans-serif;
   border: 1px solid #B5DBDB;
   overflow: hidden;
@@ -191,8 +198,8 @@ input:focus {
   font-size: 15px;
   color: grey;
   text-indent: 5px;
-  resize: none;
   display: block;
+  resize: none;
   transition: all .3s ease-in;
 }
 
@@ -225,4 +232,25 @@ input:focus {
 .time {
   font-size: 0.9em;
   font-style: normal;
+}
+
+.compose-button {
+  display: inline-block;
+  position: relative;
+  left: 350px;
+  margin-top: -60px;
+
+}
+.outbox_title {
+
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  text-align: center;
+
+}
+.view_tittle {
+
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  text-align: center;
 }
