--- a/skyfolk/templates/django_messages/base.html
+++ b/skyfolk/templates/django_messages/base.html
@@ -5,7 +5,10 @@
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/autosize.min.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/autosize.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 </head>
 <!-- No es necesario de momento '''% extends "base.html" %''' -->
 {% load i18n %}
