--- a/skyfolk/templates/django_messages/outbox.html
+++ b/skyfolk/templates/django_messages/outbox.html
@@ -1,16 +1,17 @@
-{% extends "django_messages/base.html" %} 
-{% load i18n %} 
+{% extends "django_messages/base.html" %}
+{% load i18n %}
 {% load url from future %}
 
-{% block content %} 
-<h1>{% trans "Sent Messages" %}</h1>
-{% if message_list %} 
-<table class="messages"> 
+{% block content %}
+<h3 class="outbox_title">{% trans "Sent Messages" %}</h3>
+{% if message_list %}
+    <div class="container">
+<table class="messages">
     <thead>
         <tr><th>{% trans "Recipient" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Sent" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
     <tbody>
-{% for message in message_list %} 
+{% for message in message_list %}
     <tr>
         <td>{{ message.recipient }}</td>
         <td>
@@ -22,7 +23,8 @@
 {% endfor %}
     </tbody>
 </table>
+</div>
 {% else %}
 <p>{% trans "No messages." %}</p>
-{% endif %}   
+{% endif %}
 {% endblock %}
