--- a/skyfolk/templates/django_messages/view.html
+++ b/skyfolk/templates/django_messages/view.html
@@ -3,34 +3,36 @@
 {% load url from future %}
 
 {% block content %}
-<h4>Mensajes con {{  message.sender }}.</h4>
-<div class="mensajes">
-<dl class="message-headers">
-    <dt>{% trans "Subject" %}</dt>
-    <dd><strong>{{ message.subject }}</strong></dd>
-    <dt>{% trans "Sender" %}</dt>
-    <dd>{{ message.sender }}</dd>
-    <dt>{% trans "Date" %} </dt>
-    <dd>{{ message.sent_at|date:_("DATETIME_FORMAT")}}</dd>
+<h3 class="view_tittle">Mensajes con {{  message.sender }}.</h3>
+<div class="container">
+    <div class="mensajes">
+        <dl class="message-headers">
+            <dt>{% trans "Subject" %}</dt>
+            <dd><strong>{{ message.subject }}</strong></dd>
+            <dt>{% trans "Sender" %}</dt>
+            <dd>{{ message.sender }}</dd>
+            <dt>{% trans "Date" %} </dt>
+            <dd>{{ message.sent_at|date:_("DATETIME_FORMAT")}}</dd>
 
-</dl>
+        </dl>
 
-{{ message.body|linebreaksbr }}<br /><br />
+    {{ message.body|linebreaksbr }}<br /><br />
+    </div>
+    {% ifequal message.recipient.pk user.pk %}
+    <a href="{% url 'messages_reply' message.id %}">{% trans "Reply" %}</a>
+    {% endifequal %}
+    <a href="{% url 'messages_delete' message.id %}">{% trans "Delete" %}</a>
+    {% comment %}Example reply_form integration
+    {% if reply_form %}
+    <h1>{% trans "Compose reply"%}</h1>
+    <form action="{% url 'messages_reply' message.id %}" method="post">
+    {% csrf_token %}
+    <table>
+    {{ reply_form.as_table }}
+    </table>
+     <button class="compose-button waves-effect waves-light btn" type="submit" value="{% trans "Send" %} &raquo;"/>Enviar</button>
+    </form>
 </div>
-{% ifequal message.recipient.pk user.pk %}
-<a href="{% url 'messages_reply' message.id %}">{% trans "Reply" %}</a>
-{% endifequal %}
-<a href="{% url 'messages_delete' message.id %}">{% trans "Delete" %}</a>
-{% comment %}Example reply_form integration
-{% if reply_form %}
-<h1>{% trans "Compose reply"%}</h1>
-<form action="{% url 'messages_reply' message.id %}" method="post">
-{% csrf_token %}
-<table>
-{{ reply_form.as_table }}
-</table>
-<input type="submit" value="{% trans "Send" %} &raquo;"/>
-</form>
 {% endif %}
 {% endcomment %}
 {% endblock %}
